; ModuleID = '/home/carl/AnghaBench/freebsd/tools/tools/vhba/medium/extr_vhba_medium.c_vhba_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/tools/vhba/medium/extr_vhba_medium.c_vhba_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32, i32, %struct.TYPE_6__* }
%struct.TYPE_6__ = type { %struct.TYPE_5__* }

@vhba_init.vhbas = internal global %struct.TYPE_5__ zeroinitializer, align 8
@DISK_SIZE = common dso_local global i32 0, align 4
@M_DEVBUF = common dso_local global i32 0, align 4
@M_WAITOK = common dso_local global i32 0, align 4
@M_ZERO = common dso_local global i32 0, align 4
@vhba_task = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vhba_init(%struct.TYPE_6__* %0) #0 {
  %2 = alloca %struct.TYPE_6__*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %2, align 8
  %3 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  store %struct.TYPE_6__* %3, %struct.TYPE_6__** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @vhba_init.vhbas, i32 0, i32 3), align 8
  %4 = load i32, i32* @DISK_SIZE, align 4
  %5 = shl i32 %4, 20
  store i32 %5, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @vhba_init.vhbas, i32 0, i32 0), align 8
  %6 = load i32, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @vhba_init.vhbas, i32 0, i32 0), align 8
  %7 = load i32, i32* @M_DEVBUF, align 4
  %8 = load i32, i32* @M_WAITOK, align 4
  %9 = load i32, i32* @M_ZERO, align 4
  %10 = or i32 %8, %9
  %11 = call i32 @malloc(i32 %6, i32 %7, i32 %10)
  store i32 %11, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @vhba_init.vhbas, i32 0, i32 2), align 8
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 0
  store %struct.TYPE_5__* @vhba_init.vhbas, %struct.TYPE_5__** %13, align 8
  %14 = load i32, i32* @vhba_task, align 4
  %15 = call i32 @TASK_INIT(i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @vhba_init.vhbas, i32 0, i32 1), i32 0, i32 %14, %struct.TYPE_5__* @vhba_init.vhbas)
  ret void
}

declare dso_local i32 @malloc(i32, i32, i32) #1

declare dso_local i32 @TASK_INIT(i32*, i32, i32, %struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
